tests/kyverno-policies/add-mig-gpu/gpu-nodeselector-not-removed.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-skip
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
  nodeSelector:
    nvidia.com/gpu.product: NVIDIA-A100-PCIE-40GB
