tests/kyverno-policies/add-mig-gpu/mig-gpu-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-gpu-set
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          nvidia.com/mig-1g.5gb: 1
        requests:
          nvidia.com/mig-1g.5gb: 1
  nodeSelector:
    node-role.kubernetes.io/paas: ''
