tests/kyverno-policies/add-mig-gpu/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-mig-gpu
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-mig-gpu
    rule: mig-gpu
    resources:
      - test-gpu-skip
    patchedResources: mig-gpu-not-mutated.yaml
    kind: Pod
    result: skip
  - policy: add-mig-gpu
    rule: mig-gpu
    resources:
      - test-gpu-set
    patchedResources: mig-gpu-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-mig-gpu
    rule: remove-gpu-nodeselector
    resources:
      - test-gpu-set
    patchedResources: mig-nodeselector-remove.yaml
    kind: Pod
    result: pass
  - policy: add-mig-gpu
    rule: remove-gpu-nodeselector
    resources:
      - test-gpu-skip-set
    patchedResources: gpu-nodeselector-not-removed.yaml
    kind: Pod
    result: skip
